Enum type for move directions